--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -8,6 +8,8 @@ ALLOWED_HOSTS=127.0.0.1,localhost
 # Publication per page
 PER_PAGE=10
 
+CSRF_TRUSTED_ORIGINS=http://localhost,https://localhost
+
 # Postgres Database
 POSTGRES_DB="change-me"
 POSTGRES_USER="change-me"
